[ADD] 로그아웃 로직 변경